[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "Corpusama"
version = "0.4.1"
authors = [{name="Loryn Isaacs", email="50170623+engisalor@users.noreply.github.com"}]
description = "A Python package for managing language corpora"
keywords = [
    "corpus linguistics",
    "text analysis",
    "natural language processing",
]
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
repository = "https://github.com/engisalor/corpusama.git"
